--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/graphql": "^10.0.9",
+    "@nestjs/graphql": "^10.0.11",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
-    "apollo-server-express": "^3.6.7",
+    "apollo-server-express": "^3.7.0",
     "aws-sdk": "^2.1129.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "graphql": "^16.3.0",
+    "graphql": "^16.4.0",
+    "graphql-tools": "^8.2.8",
+    "graphql-upload": "^13.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
